--- a/Suaah/Areas/Admin/Views/Flights/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Flights/Index.cshtml
@@ -3,9 +3,11 @@
 @{
     ViewData["Title"] = "Index";
 }
-<div class="row">
-<h1 class="text-center bg-black m-2 p-3 text-white col-12">Flights</h1>
+ 
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Flights</h1>
 </div>
+<hr />
 @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
 {
 <div class="row m-2">
@@ -15,29 +17,26 @@
 
 }
 <form method="get" asp-action="Index" class="m-1">
-    <div class="row">
+     <div class="row text-center">
         <div class="col-3 m-2 text-center" ><h3>Search</h3></div>
         <div class="col-3 m-2 text-center"><h3>Time</h3></div>
         <div class="col-3 m-2 text-center"><h3>Country</h3></div>
 
     </div>
-    <div class="row">
-        <div class="col-1" style="margin-bottom:5px;">
+   <div class="form-actions no-color text-center p-3 row">
+        <div class="col-3" style="margin-bottom:5px;">
             <label class="control-label">Type of Search</label>
-        </div>
-        <div class="col-2">
+        
             <select name="type" class="form-control form-select" onchange="select();" asp-items="@ViewBag.types"></select>
         </div>
-        <div class="col-1">
+         <div class="col-3">
             <label class="control-label">From</label>
-        </div>
-        <div class="col-2">
+        
             <input name="timef" type="datetime-local" class="form-control" value="@ViewBag.timef" format-value="yyyy-MM-ddThh:mm" />
         </div>
-        <div class="col-1">
+         <div class="col-3">
             <label class="control-label">From</label>
-        </div>
-        <div class="col-2">
+        
             <input name="conf" list="names" class="form-control" value="@ViewBag.conf" />
         </div>
 
@@ -53,40 +52,37 @@
             <option>@name</option>
         }
     </datalist>
-    <div class="row">
+    <div class="form-actions no-color text-center p-3 row">
 
-        <div class="col-1">
+         <div class="col-3">
             <label class="control-label">Search</label>
-        </div>
-        <div class="col-2">
+        
             <input name="search" list="airline" class="form-control" value="@ViewBag.search" />
         </div>
 
-        <div class="col-1">
+         <div class="col-3">
             <label class="control-label">To</label>
-        </div>
-        <div class="col-2">
+         
             <input name="timet" type="datetime-local" class="form-control" value="@ViewBag.timet" format-value="yyyy-MM-ddThh:mm" />
         </div>
 
-        <div class="col-1">
+       <div class="col-3">
             <label class="control-label">To</label>
-        </div>
-        <div class="col-2">
+         
             <input name="cont" class="form-control" list="names" value="@ViewBag.cont" />
         </div>
      
     </div>
-    <div class="row m-1">
-        <partial name="_Pag" />
-
-            <input type="submit" class="btn btn-secondary col-2 offset-1" onclick="go();" />
-    </div>
-    <div class="row m-2">
-        <a class="btn btn-danger offset-5 col-2" asp-action="Index">Back to full list</a>
-    </div>
+     <partial name="_Pagination" />
+        <br />
+        <br />
+     <input type="submit" class="btn btn-outline-danger p-2  btn" style="width:100%" onclick="go();" />
 </form>
-<table class="table">
+
+<div class="text-center">
+    <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
+</div>
+<table class="table table-hover table-striped text-center p-3">
     <thead>
         <tr>
             <th>
