--- a/Suaah/Areas/Customer/Views/HotelBookings/Index.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Index.cshtml
@@ -49,7 +49,13 @@
             }
         </datalist>
        
-        <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2" />
+         <br />
+        <br />
+        <partial name="_Pagination" />
+        <br />
+        <br />
+
+         <input type="submit" value="-  Search  -" class="btn btn-outline-danger p-2 " style="width:100%" />
         <br />
 
         <a asp-action="Index" class="btn btn-outline-info my-4">Back to Full List</a>
