fix flight booking errors

--- a/Suaah/Areas/Admin/Views/FlightBookingHeaders/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightBookingHeaders/Details.cshtml
@@ -102,21 +102,9 @@
                                     <div class="row my-1">
                                         <div class="col-3">Payment Status</div>
                                         <div class="col-9">
-                                            <input  type="text" readonly value="" class="form-control" />
+                                            <input  type="text" readonly value="@Model.PaymentStatus" class="form-control" />
                                         </div>
                                     </div>
-                                     <div class="row my-1">
-                                <div class="col-3">Session Id</div>
-                                <div class="col-9">
-                                    <input type="text" class="form-control" value="@Model.SessionId" readonly />
-                                </div>
-                            </div>
-                            <div class="row my-1">
-                                <div class="col-3">Payment Intent Id</div>
-                                <div class="col-9">
-                                    <input class="form-control" value="@Model.PaymentId" readonly />
-                                </div>
-                            </div>
                             </div>
                             <div class="col-12 col-lg-5 offset-lg-1">
                                 <h4 class="d-flex justify-content-between align-items-center mb-3">
