--- a/Suaah/Areas/Admin/Views/FlightBookingHeaders/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightBookingHeaders/Index.cshtml
@@ -76,32 +76,32 @@
     <thead>
         <tr>
             <th>
-                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="ID" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="ID" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type.SelectedValue">
                     @Html.DisplayNameFor(model=>model.ID)
                 </a>
             </th>
             <th>
-                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="Customer" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="Customer" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type.SelectedValue">
                     @Html.DisplayNameFor(model => model.Customer)
                 </a>
             </th>
             <th>
-                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderDate" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderDate" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type.SelectedValue">
                     @Html.DisplayNameFor(model => model.OrderDate)
                 </a>
             </th>
             <th>
-                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderTotal" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderTotal" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type.SelectedValue">
                     @Html.DisplayNameFor(model => model.OrderTotal)
                 </a>
             </th>
             <th>
-                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="OrderStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type.SelectedValue">
                     @Html.DisplayNameFor(model => model.OrderStatus)
                 </a>
             </th>
             <th>
-                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="PaymentStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type">
+                <a asp-route-pageSize="@ViewBag.PageSize" asp-route-pageNumber="@ViewBag.PageNumber" asp-action="Index" asp-route-order="PaymentStatus" asp-route-ordersort="@ViewBag.ordersort" asp-route-stats="@ViewBag.stats.SelectedValue" asp-route-pstats="@ViewBag.pstats.SelectedValue" asp-route-timef="@ViewBag.timef" asp-route-timet="@ViewBag.timet" asp-route-prif="@ViewBag.prif" asp-route-prit="@ViewBag.prit" asp-route-search="@ViewBag.search" asp-route-type="@ViewBag.type.SelectedValue">
                     @Html.DisplayNameFor(model => model.PaymentStatus)
                 </a>
             </th>
