--- a/Suaah/Areas/Admin/Views/Flights/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Flights/Index.cshtml
@@ -73,7 +73,10 @@
         </div>
      
     </div>
-     <partial name="_Pagination" />
+      <br />
+     <div class="text-center">
+         <partial name="_Pagination" />
+     </div>
         <br />
         <br />
      <input type="submit" class="btn btn-outline-danger p-2  btn" style="width:100%" onclick="go();" />
