--- a/Suaah/Areas/Customer/Views/Home/Admin.cshtml
+++ b/Suaah/Areas/Customer/Views/Home/Admin.cshtml
@@ -8,4 +8,135 @@
 </div>
 <hr />
 
+<div class="row text-center">
+
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/download.jpg" class="card-img-top" alt="Social data" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Social Data</h5>
+            <a asp-area="Admin" asp-controller="SocialDatas" asp-action="Index" class="btn btn-danger" target="_blank">Go to Social Data</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/users.png" class="card-img-top" alt="Users" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Users</h5>
+            <a asp-area="Admin" asp-controller="Customers" asp-action="Users" class="btn btn-danger" target="_blank">Go to Users</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/c.jpg" class="card-img-top" alt="Customers" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Customers</h5>
+            <a asp-area="Admin" asp-controller="Customers" asp-action="Index" class="btn btn-danger" target="_blank">Go to Customers</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/download (1).jpg" class="card-img-top" alt="Airlines" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Airlines</h5>
+            <a asp-area="Admin" asp-controller="Airlines" asp-action="Index" class="btn btn-danger" target="_blank">Go to Airlines</a>
+        </div>
+    </div>
+</div>
+
+<br />
+<br />
+
+<div class="row text-center">
+
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/download (9).png" class="card-img-top" alt="Airports" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Airports</h5>
+            <a asp-area="Admin" asp-controller="Airports" asp-action="Index" class="btn btn-danger" target="_blank">Go to Airports</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/maxresdefault.jpg" class="card-img-top" alt="Countries" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Countries</h5>
+            <a asp-area="Admin" asp-controller="Countries" asp-action="Index" class="btn btn-danger" target="_blank">Go to Countries</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/h.png" class="card-img-top" alt="Hotels" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Hotels</h5>
+            <a asp-area="Admin" asp-controller="Hotels" asp-action="Index" class="btn btn-danger" target="_blank">Go to Hotels</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/indian-hotels.jpg" class="card-img-top" alt="Hotel Rooms" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Hotel Rooms</h5>
+            <a asp-area="Admin" asp-controller="HotelRooms" asp-action="Index" class="btn btn-danger" target="_blank">Go to Hotel Room</a>
+        </div>
+    </div>
+</div>
+
+<br />
+<br />
+
+<div class="row text-center">
+
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/testimonial-22.jpg" class="card-img-top" alt="Room Services" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Room Services</h5>
+            <a asp-area="Admin" asp-controller="Services" asp-action="Index" class="btn btn-danger" target="_blank">Go to Room Services</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/download (2).jpg" class="card-img-top" alt="Airports" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Flights</h5>
+            <a asp-area="Admin" asp-controller="Flights" asp-action="Index" class="btn btn-danger" target="_blank">Go to Flights</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/download (3).jpg" class="card-img-top" alt="Flight Classes" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Flight Classes</h5>
+            <a asp-area="Admin" asp-controller="FlightClasses" asp-action="Index" class="btn btn-danger" target="_blank">Go to Flight Classes</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/g.png" class="card-img-top" alt="Flights Booked" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">All Flights Booking</h5>
+            <a asp-area="Admin" asp-controller="FlightBookingHeaders" asp-action="Index" class="btn btn-danger" target="_blank">Go to All Flights Booking</a>
+        </div>
+    </div>
+
+</div>
+
+<br />
+<br />
+
+<div class="row text-center">
+
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/images.jpg" class="card-img-top" alt="All Hotels Booking" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">All Hotels Booking</h5>
+            <a asp-area="Admin" asp-controller="AllHotelBookingHeaders" asp-action="Index" class="btn btn-danger" target="_blank">Go to All Hotels Booking</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/flight-booking-services-500x500.jpg" class="card-img-top" alt="Flight Booking" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Flight Booking</h5>
+            <a asp-area="Customer" asp-controller="FlightBookings" asp-action="Index" class="btn btn-danger" target="_blank">Go to Flight Booking</a>
+        </div>
+    </div>
+    <div class="card m-auto" style="width: 18rem;">
+        <img src="~/img/images/images (1).jpg" class="card-img-top" alt="Hotel Booking" style="height:200px">
+        <div class="card-body">
+            <h5 class="card-title">Hotel Booking</h5>
+            <a asp-area="Customer" asp-controller="HotelBookings" asp-action="Index" class="btn btn-danger" target="_blank">Go to Hotel Booking</a>
+        </div>
+    </div>
+
+</div>
 
