--- a/Suaah/Areas/Customer/Views/HotelBookings/Index.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Index.cshtml
@@ -135,7 +135,7 @@
         </div>
         <div class="card-footer">
             <div class="row">
-                    <a class="btn btn-primary form-control" asp-area="Customer" asp-action="Create" asp-route-roomId="@room.Id">Reservation</a>
+                    <a class="btn btn-primary form-control" asp-area="Customer" asp-action="Create" asp-route-roomId="@room.Id">Booking</a>
             </div>
         </div>
 
